# nrfx

./: LICENSE  README.md  meson.build  meson_options.txt
doc/buildfiles/: extra_stylesheet.css
doc/config_dox/: nrfx_pwm_dox_config.h  nrfx_rtc_dox_config.h  nrfx_spi_dox_config.h  nrfx_spim_dox_config.h  nrfx_spis_dox_config.h  nrfx_timer_dox_config.h  nrfx_twi_dox_config.h  nrfx_twim_dox_config.h  nrfx_twis_dox_config.h
drivers/: nrfx_common.h
drivers/include/: nrfx_i2s.h  nrfx_nfct.h  nrfx_qspi.h  nrfx_saadc.h  nrfx_spis.h  nrfx_timer.h  nrfx_wdt.h
drivers/src/: nrfx_nfct.c  nrfx_usbd.c
hal/: nrf_ecb.c  nrf_ecb.h  nrf_nfct.h  nrf_nvmc.c  nrf_pwm.h
mdk/: arm_startup_nrf51.s  arm_startup_nrf52.s  arm_startup_nrf52805.s  arm_startup_nrf52810.s  arm_startup_nrf52811.s  arm_startup_nrf52820.s  arm_startup_nrf52833.s  arm_startup_nrf52840.s  arm_startup_nrf5340_application.s  arm_startup_nrf5340_network.s  arm_startup_nrf9160.s  compiler_abstraction.h  gcc_startup_nrf51.S  gcc_startup_nrf52.S  gcc_startup_nrf52805.S  gcc_startup_nrf52810.S  gcc_startup_nrf52811.S  gcc_startup_nrf52820.S  gcc_startup_nrf52833.S  gcc_startup_nrf52840.S  gcc_startup_nrf5340_application.S  gcc_startup_nrf5340_network.S  gcc_startup_nrf9160.S  iar_startup_nrf51.s  iar_startup_nrf52.s  iar_startup_nrf52805.s  iar_startup_nrf52810.s  iar_startup_nrf52811.s  iar_startup_nrf52820.s  iar_startup_nrf52833.s  iar_startup_nrf52840.s  iar_startup_nrf5340_application.s  iar_startup_nrf5340_network.s  iar_startup_nrf9160.s  meson.build  nrf.h  nrf51.h  nrf51.svd  nrf51_common.ld  nrf51_deprecated.h  (+53 more)
soc/: nrfx_atomic.h
